--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -154,15 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "margin = int(0.1 * w)\n",
-    "x_start = max(0, x - margin)\n",
-    "y_start = max(0, y - margin)\n",
-    "x_end = min(x + w + margin, image.shape[1])\n",
-    "y_end = min(y + h + margin, image.shape[0])"
+    "x_start = max(0, x - int(0.1 * w))\n",
+    "y_start = max(0, y - int(0.1 * h))\n",
+    "x_end = min(x + w + int(0.1 * w), image.shape[1])\n",
+    "y_end = min(y + h + int(0.1 * h), image.shape[0])"
    ]
   },
   {
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
